--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
         manifest.json provides metadata used when your web app is installed on a
@@ -22,6 +20,7 @@
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
         <title>Pugio</title>
+        <script src="//unpkg.zhimg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
