--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
         -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="stylesheet" href="//unpkg.com/simplebar-react@2.3.6/dist/simplebar.min.css">
+        <link rel="stylesheet" href="//npm.elemecdn.com/simplebar-react@2.3.6/dist/simplebar.min.css">
         <!--
         Notice the use of %PUBLIC_URL% in the tags above.
         It will be replaced with the URL of the `public` folder during the build.
@@ -22,6 +22,7 @@
         -->
         <title>Pugio</title>
         <script src="//unpkg.zhimg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
+        <script src="//npm.elemecdn.com/resize-observer-polyfill@1.5.1/dist/ResizeObserver.js"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
