feat: 🎸 add channel component

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <title>Pugio</title>
         <script src="//unpkg.zhimg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
         <script src="//npm.elemecdn.com/resize-observer-polyfill@1.5.1/dist/ResizeObserver.js"></script>
+        <script async defer src="//requirejs.org/docs/release/2.3.6/minified/require.js"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
