--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="stylesheet" href="//npm.elemecdn.com/simplebar-react@2.3.6/dist/simplebar.min.css">
+        <link rel="stylesheet" href="//npm.elemecdn.com/xterm@4.17.0/css/xterm.css">
         <!--
         Notice the use of %PUBLIC_URL% in the tags above.
         It will be replaced with the URL of the `public` folder during the build.
