refactor: 💡 (@channel/*) migrate styles

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <script src="//unpkg.zhimg.com/react@17.0.2/umd/react.production.min.js"></script>
         <script src="//unpkg.zhimg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
         <script src="//unpkg.zhimg.com/lodash@4.17.21/lodash.min.js"></script>
+        <script src="/static/polyfills/focus-within.js"></script>
         <script>
             document.getElementById('require-js').onload = function() {
                 define('React', () => {
