refactor: 💡 migrate menus to popover

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         <script async defer src="//npm.elemecdn.com/requirejs@2.3.6/require.js" id="require-js"></script>
         <script src="//unpkg.zhimg.com/lodash@4.17.21/lodash.min.js"></script>
         <script src="/static/polyfills/focus-within.js"></script>
+        <script src="//gw.alipayobjects.com/os/lib/antv/g2/4.2.2/dist/g2.min.js"></script>
         <script>
             document.getElementById('require-js').onload = function() {
                 define('React', () => {
