--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             }
         </script>
     </head>
-    <body>
+    <body oncontextmenu="return false">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
